Fix language dropdown contrast in Chrome

--- a/src/app/scss/_fields.scss
+++ b/src/app/scss/_fields.scss
@@ -26,6 +26,11 @@ input:not(.invisible), textarea:not(.invisible), select {
 	}
 }
 
+option {
+	background: #333;
+	color: white;
+}
+
 input[type="color"] {
 	padding: 0.2rem;
 	width: 50px;
